[tool.poetry]
name = "py-smps"
version = "2.1.0a0"
description = "A simple python library to import and visualize data from particle sizing instruments."
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/quant-aq/py-smps"
packages = [
    { include="smps", from="." }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
statsmodels = "^0.13"
seaborn = "^0.12"
joblib = "^1.2"
requests = "^2.24"
scipy = "^1.9"
numpy = "^1.23"
pandas = "^1.4"
setuptools = "^65.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
coverage = "^5.2"
pytest-coverage = "^0.0"
sphinx = "^4.5"
toml = "^0.10.1"
furo = "^2021.4.11-beta.34"
sphinx-copybutton = "^0.5.0"
myst-parser = "^0.17.0"
numpydoc = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
