[tool.poetry]
name = "py-smps"
version = "2.1.0a6"
description = "A simple python library to import and visualize data from particle sizing instruments"
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/quant-aq/py-smps"
homepage = "https://github.com/quant-aq/py-smps"
documentation = "https://github.com/quant-aq/py-smps"
packages = [
    { include="smps", from="." }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = ">=1.2"
scipy = ">1.7"
setuptools = ">48.0"
joblib = "^1.3"
seaborn = ">=0.12"
matplotlib = ">=3.4,!=3.6.1"
numpy = ">1.20,!=1.24.0"
statsmodels = ">=0.13.0"
requests = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
coverage = "^5.2"
pytest-coverage = "^0.0"
sphinx = "^4.5"
toml = "^0.10.1"
furo = "^2022.1"
sphinx-copybutton = "^0.5.0"
myst-parser = "^0.17.0"
numpydoc = "^1.2"
sphinx-issues = "^3.0.1"
nbsphinx = "^0.9.2"
sphinx-gallery = "^0.13.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/quant-aq/py-smps/issues"